--- a/azureKFC.Functions/Properties/launchSettings.json
+++ b/azureKFC.Functions/Properties/launchSettings.json
@@ -2,8 +2,7 @@
   "profiles": {
     "azureKFC.Functions": {
       "commandName": "Project",
-      "commandLineArgs": "--port 7294",
-      "launchBrowser": false
+      "commandLineArgs": "host start --pause-on-error"
     }
   }
 }
